--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.1.0",
     "author": "Sinbad Software",
     "dependencies": {
+        "@artsy/fresnel": "^3.5.0",
         "@loadable/component": "^5.15.2",
         "@svgr/webpack": "^6.1.2",
         "commander": "^8.3.0",
@@ -61,7 +62,7 @@
         "@types/node": "^17.0.8",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
-        "@types/styled-components": "^5.1.19",
+        "@types/styled-components": "^5.1.25",
         "@typescript-eslint/eslint-plugin": "^5.9.0",
         "@typescript-eslint/parser": "^5.9.0",
         "babel-eslint": "10.1.0",
