--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
         "react-ticker": "^1.3.1",
         "use-query-params": "^1.2.3",
         "web-push-notifications": "^3.24.0",
-        "webpack": "^5.65.0"
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^16.2.1",
