--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "@storybook/builder-webpack5": "^6.4.9",
         "@storybook/manager-webpack5": "^6.4.9",
         "@storybook/react": "^6.4.9",
+        "@stylelint/postcss-css-in-js": "^0.38.0",
         "@types/node": "^17.0.8",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
